    {+} !fetchuser cmd to fetch some information about site settings + basic recommendation (#51)
    {+} Support for wildcards in !batch (#222)                                  --- some more work + testing needed ---
    {+} Completely new SQLite engine
    {+} Completely new MySQL/MariaDB engine
    {+} !setdownoutofspace command to configure set_down_on_out_of_space value per site (#158)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {#} Remove language and 2160(p|i) tags before searching on TVmaze
    {#} Correct counting and comparing of CRC errors in TPazoRaceTask
    {#} Missing built-in skip features from slftp.skip added (#195)
    {#} Saving TVInfo for some shows containing ' in its name (#191, #196)
    {#} Double free of TNukeQueueItem (#203)
    {#} !batch looses sites in bnctest output over time (#216)
    {#} !prelist parameter count (#212)
    {#} Wrong mp3genre detected on IRC announce (#114)
    {#} !raw command timeout/error handling (#225)
    {#} !slots command didn't supported showing of siteslots for all sites (#230)
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {^} Detection for iOFTPD sites
    {^} IMDb parsing code update due to recent website changes
    {^} taskdirlist shows sitename on 'can not dirlist' announce (#227)
    {^} !indexquery search count is selectable (#188)